# mobhook

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
presets/flutter-test/: script.sh
presets/security/: .mobsf  ci-security-scan.sh  gitleaks.toml  script.sh
src/: cli.rs  lib.rs  main.rs
src/commands/: create.rs  doctor.rs  fetch.rs  init.rs  list.rs  mod.rs  remove.rs  update.rs
src/core/: config.rs  hook_manager.rs  logger.rs  mod.rs  preset.rs  remote_sync.rs  tools.rs
src/presets/: flutter_test.rs  mod.rs  security.rs
tests/: config_test.rs  hook_manager_test.rs  preset_test.rs
tests/common/: mod.rs
